# particle-match

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  download_data.sh  fastmatchConfig.cmake.in  ztable.data
FAsT-Match/: README.md
FAsT-Match/FAsT-Match/: MatchConfig.h  main.cpp
FAsT-Match/exec/: ParticleFilterWorkspace.cpp  ParticleFilterWorkspace.hpp  PascalVocWriter.hpp  dataset-test.cpp  map-masker.cpp  particle-match-test.cpp  test-slopes.cpp
FAsT-Match/src/: AffineTransformation.cpp  AffineTransformation.hpp  ConfigExpanderBase.cpp  ConfigExpanderBase.hpp  ConfigVisualizer.cpp  ConfigVisualizer.hpp  FastMatch.cpp  FastMatch.hpp  FastMatcherThread.cpp  FastMatcherThread.hpp  ParticleFastMatch.cpp  ParticleFastMatch.hpp  ParticleFilterConfigExpander.cpp  ParticleFilterConfigExpander.hpp  Utilities.cpp  Utilities.hpp
FAsT-Match/src/matcher/: templmatch_ci.cpp  templmatch_ci.h
FAsT-Match/src/pf/: Particle.cpp  Particle.hpp  Particles.cpp  Particles.hpp
cmake/: FindGeographicLib.cmake
dataset_reader/include/fastmatch-dataset/: GeotiffMap.hpp  MetadataEntry.hpp  MetadataEntryReader.hpp  Vector3d.hpp
dataset_reader/src/classes/: GeotiffMap.cpp  Map.cpp  MetadataEntry.cpp  MetadataEntryReader.cpp  Vector3d.cpp
include/fastmatch-dataset/: GeotiffMap.hpp  Map.hpp  MetadataEntry.hpp  MetadataEntryReader.hpp  Quaternion.hpp  Vector3d.hpp
localization/FAsT-Match/: FAsTMatch.cpp  FAsTMatch.h  MatchConfig.cpp  MatchNet.cpp  MatchNet.h
localization/exec/: ParticleFilterWorkspace.cpp  ParticleFilterWorkspace.hpp  PascalVocWriter.cpp  dataset-test.cpp  map-tests.cpp  match-test.cpp  particle-match-test.cpp  test-image-sampling.cpp  xml-parser.h
localization/src/: AffineTransformation.hpp  ConfigVisualizer.cpp  ConfigVisualizer.hpp  FastMatch.cpp  FastMatch.hpp  FastMatcherThread.cpp  GridConfigExpander.cpp  GridConfigExpander.hpp  ImageSample.cpp  ImageSample.hpp  Particle.cpp  Particle.hpp  ParticleFastMatch.cpp  ParticleFastMatch.hpp  Particles.hpp  Utilities.cpp  Utilities.hpp
localization/src/pf/: Particle.hpp  Particles.cpp
src/: map-match.cpp  run-dataset.cpp
src/classes/: GeotiffMap.cpp  Map.cpp  MetadataEntry.cpp  MetadataEntryReader.cpp  MetadataEntryReader.hpp  Quaternion.cpp  Vector3d.cpp
templates/: templ_00000.txt  templ_00001.txt  templ_00002.txt  templ_00003.txt  templ_00004.txt  templ_00005.txt  templ_00006.txt  templ_00007.txt  templ_00008.txt  templ_00009.txt  templ_00010.txt  templ_00011.txt  templ_00012.txt  templ_00013.txt  templ_00014.txt  templ_00015.txt
